fix body overflow

--- a/styles/base.css
+++ b/styles/base.css
@@ -10,15 +10,8 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: 'Tinyverse', sans-serif;
-}
-
-/* body {
   overflow: hidden;
-  background-image: url('/assets/images/backgrounds/bg-water.jpeg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-} */
+}
 
 #backgrounds {
   position: fixed;
