--- a/styles/nav.css
+++ b/styles/nav.css
@@ -32,6 +32,7 @@
   align-items: center;
   justify-content: center;
   gap: 25px;
+  padding: 0;
 }
 
 .qr-container {
